# altinn-all-apps-rs

./: .gitignore  Cargo.toml  README.md  config.sample.ini
.mono/registry/CurrentUser/software/microsoft/csdevkit/v1/pids/2376019_133572543446648142/: values.xml
src/: cdn_client.rs  configuration.rs  git_client.rs  gitea_client.rs  main.rs  ui.rs
