[package]
name = "altinn-all-apps-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = "none"
codegen-units = 1

[dependencies]
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
num_cpus = "1.16.0"
spmc = "0.3.0"
is-root = "0.1.3"
indicatif = "0.17.8"
config = { version = "0.14.0", default-features = false, features = ["ini"] }
